fix: adjust header z-index and fix hamburger nav position

--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -21,10 +21,11 @@
   @media (width <= 640px) {
     position: absolute;
 
-    inset-block-start: 0;
-    inset-inline-end: 0;
+    inset: 0 0 auto auto;
+    z-index: var(--layer-3);
 
     background-color: transparent;
+    box-shadow: none;
   }
 
   & > * {
